--- a/deploy/idc_shanghai/deployments.yaml
+++ b/deploy/idc_shanghai/deployments.yaml
@@ -1,12 +1,12 @@
 host01:
   dce_md_publisher:
     binary: md_server
-    tag: prod  # or version like: v1.2.3
+    version: v1.2.4-rc1
     templates:
       - name: dce_md_publisher.json
         cfg_envs:
-          listen_nic: eth0  # 192.168.1.100
+          listen_nic: sf0  # 192.168.1.101
           listen_port: 8080
-          log_cpu: 0        # numa 0
-          main_loop_cpu: 2  # numa 0
-          admin_loop_cpu: 1 # numa 0
+          log_cpu: 0  # numa 0
+          main_loop_cpu: 15  # numa 1
+          admin_loop_cpu: 1  # numa 0
