--- a/deployments/idc_shanghai/deployments.yaml
+++ b/deployments/idc_shanghai/deployments.yaml
@@ -20,3 +20,13 @@ host01:
           log_cpu: 0  # numa 0
           main_loop_cpu: 2  # numa 0
           admin_loop_cpu: 1  # numa 0
+host02:
+  dce_md_recorder_backup:
+    binary: md_recorder
+    tag: prod
+    templates:
+      - name: dce_md_recorder_backup.json
+        cfg_envs:
+          log_cpu: 0  # numa 1
+          main_loop_cpu: 2  # numa 1
+          admin_loop_cpu: 1  # numa 0
