--- a/deployments/idc_shanghai/hosts.yaml
+++ b/deployments/idc_shanghai/hosts.yaml
@@ -14,3 +14,20 @@ host01:
       - name: sf0
         ip: 192.168.1.101
         type: solarflare
+
+host02:
+    cpus: 16
+    numa_nodes:
+      - id: 0
+        cpus: 1,3,5,7,9,11,13,15
+      - id: 1
+        cpus: 0,2,4,6,8,10,12,14
+    isolated_cpus: 2-15
+    shared_cpus: 0,1  # for logging and admin
+    nics:
+      - name: eth0
+        ip: 192.168.2.102
+        type: ethernet
+      - name: sf0
+        ip: 192.168.2.102
+        type: solarflare
